shit code update